--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.19.4 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,20 +31,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  appwrite: ^8.3.0
+  fpdart: ^0.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  appwrite: ^8.2.0
-  flutter_svg: ^1.1.6
-  flutter_riverpod: ^2.1.3
-  fpdart: ^0.4.0
-  image_picker: ^0.8.6+1
+  flutter_svg: ^2.0.4
+  flutter_riverpod: ^2.3.2
+  image_picker: ^0.8.9
   carousel_slider: ^4.2.1
-  timeago: ^3.3.0
+  timeago: ^3.4.0
   any_link_preview: ^3.0.0
   like_button: ^2.0.5
+  flutter_screenutil: ^5.7.0
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
